--- a/press-article/src/main/resources/application.properties
+++ b/press-article/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/pressdb
-spring.datasource.username= janek
-spring.datasource.password= 32167
+spring.datasource.username= ****
+spring.datasource.password= ****
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
